--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="shortcut icon"
+      href="https://cdn-icons-png.flaticon.com/128/12884/12884706.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="container mt-5">
